--- a/src/app/shared/style/base/_typography.scss
+++ b/src/app/shared/style/base/_typography.scss
@@ -64,6 +64,11 @@ h4 {
 }
 
 // *******************************************************
+//      Size
+// *******************************************************
+.fz-label { font-size: 0.8rem; }
+
+// *******************************************************
 //      Weight
 // *******************************************************
 .text--regular { font-weight: 400; }
@@ -72,9 +77,15 @@ h4 {
 // *******************************************************
 //      Color
 // *******************************************************
+.text--gray-4 { color: $gray4; }
 .text--white { color: $white; }
 
 // *******************************************************
 //      Align
 // *******************************************************
 .text--align-center { text-align: center; }
+
+// *******************************************************
+//      Align
+// *******************************************************
+.text--underline { text-decoration: underline; }
