--- a/src/app/shared/style/base/_customComponents.scss
+++ b/src/app/shared/style/base/_customComponents.scss
@@ -12,12 +12,13 @@ button {
     box-shadow: $boxShadowMediumDefault;
     border-radius: $cornerRadius;
     font-weight: bold;
-    font-size: 1.5rem;
-    padding: 1.4rem 2.2rem;
+    font-size: 1.3rem;
+    padding: 1.2rem;
     outline: none;
 
     @include bp-small {
-        font-size: 1.3rem;
+        font-size: 1.15rem;
+        padding: 1rem;
     }
 }
 
