--- a/src/app/shared/style/layout/_layout.scss
+++ b/src/app/shared/style/layout/_layout.scss
@@ -9,3 +9,9 @@
 //          Margin
 // *******************************************************
 .m-a { margin: auto; }
+
+// Bottom
+.mb-5 { margin-bottom: 5px; }
+.mb-10 { margin-bottom: 10px; }
+.mb-20 { margin-bottom: 20px; }
+.mb-30 { margin-bottom: 30px; }
