Add sign-up page (mobile)

--- a/src/app/shared/style/layout/_container.scss
+++ b/src/app/shared/style/layout/_container.scss
@@ -1,7 +1,15 @@
 @import './mediaQuery';
 
 .default-page-container {
-    @include bp-small {
-        width: 100%;
+    width: 90%;
+    max-width: 1024px;
+    background-color: $white;
+    box-shadow: $boxShadowLowDefault;
+    padding: 35px 25px;
+    margin: 0 auto;
+
+    @include bp-medium {
+        width: 95%;
+        max-width: 400px;
     }
 }
