--- a/src/reset.scss
+++ b/src/reset.scss
@@ -9,7 +9,7 @@ a, code, ol, ul, li,
 fieldset, form, label, legend, input, select,
 table, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, footer, header,
-main, nav, section, audio, video {
+div, main, nav, section, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
