--- a/src/app/pages/sign-up/sign-up.page.scss
+++ b/src/app/pages/sign-up/sign-up.page.scss
@@ -4,6 +4,14 @@
 
 .sign-up {
 
+    & > .default-page-container {
+        max-width: 600px;
+
+        @include bp-medium {
+            max-width: 400px;
+        }
+    }
+
     &__input {
         padding: 12px 6px;
         border: 1px solid $gray3;
@@ -11,6 +19,21 @@
 
         &:focus {
             border-color: $green1;
+        }
+    }
+
+    &__password-container {
+        @include bp-small {
+            flex-direction: column;
+
+            & > section.width-50 {
+                width: 100%;
+                margin: 0;
+
+                &.mr-5 {
+                    margin-bottom: 20px;
+                }
+            }
         }
     }
 
