--- a/src/app/shared/style/layout/_layout.scss
+++ b/src/app/shared/style/layout/_layout.scss
@@ -3,6 +3,8 @@
 // *******************************************************
 
 .width-100 { width: 100%; }
+.width-50 { width: 50%; }
+
 .height-100 { height: 100%; }
 
 // *******************************************************
@@ -10,8 +12,14 @@
 // *******************************************************
 .m-a { margin: auto; }
 
+// Right
+.mr-5 { margin-right: 5px; }
+
 // Bottom
 .mb-5 { margin-bottom: 5px; }
 .mb-10 { margin-bottom: 10px; }
 .mb-20 { margin-bottom: 20px; }
 .mb-30 { margin-bottom: 30px; }
+
+// Left
+.ml-5 { margin-left: 5px; }
