Implement labeled-input in login page

--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -13,10 +13,14 @@
         @include bp-medium {
             width: 95%;
         }
+    }
 
-        & input {
-            padding: 10px 0;
-            border-bottom: 1px solid $gray3;
+    &__input {
+        padding: 10px 0;
+        border-bottom: 1px solid $gray3;
+        
+        &:focus {
+            border-color: $green1;
         }
     }
 
