Add authenticated-header component

--- a/src/app/shared/style/base/_appDimensions.scss
+++ b/src/app/shared/style/base/_appDimensions.scss
@@ -6,3 +6,8 @@ $boxShadowActive: 1px 1px 3px #aaa;
 
 // Corner radius
 $cornerRadius: 5px;
+
+// Header
+$headerHeight: 70px;
+$headerHeightMobile: 50px;
+$headerBoxShadow: 0px 2px 3px #aaa;
