--- a/src/app/shared/style/layout/_layout.scss
+++ b/src/app/shared/style/layout/_layout.scss
@@ -23,3 +23,13 @@
 
 // Left
 .ml-5 { margin-left: 5px; }
+
+// *******************************************************
+//          Padding
+// *******************************************************
+
+// Right
+.pr-20 { padding-right: 20px; }
+
+// Left
+.pl-20 { padding-left: 20px; }
