--- a/src/app/shared/style/base/_typography.scss
+++ b/src/app/shared/style/base/_typography.scss
@@ -77,7 +77,10 @@ h4 {
 // *******************************************************
 //      Color
 // *******************************************************
+.text--blue-1 { color: $blue1; }
 .text--gray-4 { color: $gray4; }
+.text--green-2 { color: $green2; }
+.text--orange-2 { color: $orange2; }
 .text--white { color: $white; }
 
 // *******************************************************
