Add add-order modal

--- a/src/app/shared/style/base/_appDimensions.scss
+++ b/src/app/shared/style/base/_appDimensions.scss
@@ -20,3 +20,4 @@ $headerBoxShadow: 0px 2px 3px #aaa;
 // Modal
 $modalBoxShadow: 2px 2px 3px #777;
 $modalPadding: 30px 20px;
+$modalOverlayBackground: rgba(0, 0, 0, 0.3);
