--- a/src/app/shared/components/modal/modal.component.scss
+++ b/src/app/shared/components/modal/modal.component.scss
@@ -13,6 +13,7 @@
     border-radius: $cornerRadius;
     outline: none;
     box-shadow: $modalBoxShadow;
+    padding: 25px 15px;
 
     
     &__overlay {
@@ -22,6 +23,6 @@
         right: 0;
         bottom: 0;
         z-index: $zIndexModalOverlay;
-        background-color: $modalBackground;
+        background-color: $modalOverlayBackground;
     }
 }
