Add logo to login page

--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -20,6 +20,10 @@
         }
     }
 
+    &__logo {
+        height: 110px;
+    }
+
     &__input {
         padding: 10px 0;
         border-bottom: 1px solid $gray3;
