--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -27,6 +27,7 @@
     &__input {
         padding: 10px 0;
         border-bottom: 1px solid $gray3;
+        border-radius: 0;
         
         &:focus {
             border-color: $green1;
